--- a/sr_backcn_ad.conf
+++ b/sr_backcn_ad.conf
@@ -1,12 +1,11 @@
-# Best Shadowrocket Rules (https://github.com/h2y/Shadowrocket-ADBlock-Rules)
-# by Moshel
-# build time: 2020-03-22 23:37:11
+# Shadowrocket Rules by Skyrocketing Hong (https://github.com/skyrocketing1999/Shadowrocket-ADBlock-Rules)
+# build time: 2020-04-16 18:51:15
 
 [General]
 bypass-system = true
 skip-proxy = 192.168.0.0/16, 10.0.0.0/8, 172.16.0.0/12, localhost, *.local, e.crashlytics.com, captive.apple.com
 bypass-tun = 10.0.0.0/8,100.64.0.0/10,127.0.0.0/8,169.254.0.0/16,172.16.0.0/12,192.0.0.0/24,192.0.2.0/24,192.88.99.0/24,192.168.0.0/16,198.18.0.0/15,198.51.100.0/24,203.0.113.0/24,224.0.0.0/4,255.255.255.255/32
-dns-server = system, 114.114.114.114, 112.124.47.27, 8.8.8.8, 8.8.4.4
+dns-server = 119.29.29.29, 1.2.4.8, 223.5.5.5, 8.8.8.8, 8.8.4.4, system 
 [Rule]
 #
 # 国内外划分，对中国网站代理，外国网站直连。提供给海外华侨使用。
@@ -7146,4 +7145,4 @@ FINAL,DIRECT
 [URL Rewrite]
 ^http://(www.)?google.cn https://www.google.com 302
 
-# By Moshel @ https://hzy.pw/
+# By Skyrocketing Hong @ https://skyrocketing.ninja/
