--- a/sr_top500_banlist_ad.conf
+++ b/sr_top500_banlist_ad.conf
@@ -1,5 +1,5 @@
 # Shadowrocket Rules by Skyrocketing Hong (https://github.com/skyrocketing1999/Shadowrocket-ADBlock-Rules)
-# build time: 2020-07-17 06:00:14
+# build time: 2020-07-18 06:00:16
 
 [General]
 bypass-system = true
@@ -51782,6 +51782,7 @@ DOMAIN-SUFFIX,antichristendom.com,Proxy
 DOMAIN-SUFFIX,antiwave.net,Proxy
 DOMAIN-SUFFIX,anyporn.com,Proxy
 DOMAIN-SUFFIX,anysex.com,Proxy
+DOMAIN-SUFFIX,ao3.org,Proxy
 DOMAIN-SUFFIX,aobo.com.au,Proxy
 DOMAIN-SUFFIX,aofriend.com,Proxy
 DOMAIN-SUFFIX,aofriend.com.au,Proxy
@@ -51828,6 +51829,8 @@ DOMAIN-SUFFIX,archive.is,Proxy
 DOMAIN-SUFFIX,archive.li,Proxy
 DOMAIN-SUFFIX,archive.org,Proxy
 DOMAIN-SUFFIX,archive.today,Proxy
+DOMAIN-SUFFIX,archiveofourown.com,Proxy
+DOMAIN-SUFFIX,archiveofourown.org,Proxy
 DOMAIN-SUFFIX,archives.gov,Proxy
 DOMAIN-SUFFIX,archives.gov.tw,Proxy
 DOMAIN-SUFFIX,arctosia.com,Proxy
@@ -52454,7 +52457,6 @@ DOMAIN-SUFFIX,cling.omy.sg,Proxy
 DOMAIN-SUFFIX,clinica-tibet.ru,Proxy
 DOMAIN-SUFFIX,clipfish.de,Proxy
 DOMAIN-SUFFIX,cloakpoint.com,Proxy
-DOMAIN-SUFFIX,cloud.feedly.com,Proxy
 DOMAIN-SUFFIX,cloud.mail.ru,Proxy
 DOMAIN-SUFFIX,club1069.com,Proxy
 DOMAIN-SUFFIX,clyp.it,Proxy
@@ -52566,7 +52568,6 @@ DOMAIN-SUFFIX,csw.org.uk,Proxy
 DOMAIN-SUFFIX,ct.org.tw,Proxy
 DOMAIN-SUFFIX,ctao.org,Proxy
 DOMAIN-SUFFIX,ctfriend.net,Proxy
-DOMAIN-SUFFIX,cthlo.github.io,Proxy
 DOMAIN-SUFFIX,ctitv.com.tw,Proxy
 DOMAIN-SUFFIX,cts.com.tw,Proxy
 DOMAIN-SUFFIX,cuhkacs.org,Proxy
@@ -52707,6 +52708,8 @@ DOMAIN-SUFFIX,dipity.com,Proxy
 DOMAIN-SUFFIX,directcreative.com,Proxy
 DOMAIN-SUFFIX,discoins.com,Proxy
 DOMAIN-SUFFIX,disconnect.me,Proxy
+DOMAIN-SUFFIX,discord.com,Proxy
+DOMAIN-SUFFIX,discord.gg,Proxy
 DOMAIN-SUFFIX,discordapp.com,Proxy
 DOMAIN-SUFFIX,discordapp.net,Proxy
 DOMAIN-SUFFIX,discuss.com.hk,Proxy
@@ -53077,6 +53080,7 @@ DOMAIN-SUFFIX,fdc64.de,Proxy
 DOMAIN-SUFFIX,fdc64.org,Proxy
 DOMAIN-SUFFIX,fdc89.jp,Proxy
 DOMAIN-SUFFIX,feedburner.com,Proxy
+DOMAIN-SUFFIX,feedly.com,Proxy
 DOMAIN-SUFFIX,feeds.fileforum.com,Proxy
 DOMAIN-SUFFIX,feedx.net,Proxy
 DOMAIN-SUFFIX,feelssh.com,Proxy
@@ -53282,6 +53286,7 @@ DOMAIN-SUFFIX,g6hentai.com,Proxy
 DOMAIN-SUFFIX,gabocorp.com,Proxy
 DOMAIN-SUFFIX,gaeproxy.com,Proxy
 DOMAIN-SUFFIX,gaforum.org,Proxy
+DOMAIN-SUFFIX,gagaoolala.com,Proxy
 DOMAIN-SUFFIX,galaxymacau.com,Proxy
 DOMAIN-SUFFIX,galenwu.com,Proxy
 DOMAIN-SUFFIX,galstars.net,Proxy
@@ -53369,6 +53374,8 @@ DOMAIN-SUFFIX,girlbanker.com,Proxy
 DOMAIN-SUFFIX,gist.github.com,Proxy
 DOMAIN-SUFFIX,git.io,Proxy
 DOMAIN-SUFFIX,github.com,Proxy
+DOMAIN-SUFFIX,github.io,Proxy
+DOMAIN-SUFFIX,githubusercontent.com,Proxy
 DOMAIN-SUFFIX,gizlen.net,Proxy
 DOMAIN-SUFFIX,gjczz.com,Proxy
 DOMAIN-SUFFIX,glass8.eu,Proxy
@@ -53599,14 +53606,12 @@ DOMAIN-SUFFIX,hacg.red,Proxy
 DOMAIN-SUFFIX,hacken.cc,Proxy
 DOMAIN-SUFFIX,hacker.org,Proxy
 DOMAIN-SUFFIX,hackthatphone.net,Proxy
-DOMAIN-SUFFIX,hahaxixi.github.io,Proxy
 DOMAIN-SUFFIX,hahlo.com,Proxy
 DOMAIN-SUFFIX,hakkatv.org.tw,Proxy
 DOMAIN-SUFFIX,handcraftedsoftware.org,Proxy
 DOMAIN-SUFFIX,hanime.tv,Proxy
 DOMAIN-SUFFIX,hanunyi.com,Proxy
 DOMAIN-SUFFIX,hao.news,Proxy
-DOMAIN-SUFFIX,haoel.github.io,Proxy
 DOMAIN-SUFFIX,happy-vpn.com,Proxy
 DOMAIN-SUFFIX,haproxy.org,Proxy
 DOMAIN-SUFFIX,hardsextube.com,Proxy
@@ -54757,6 +54762,7 @@ DOMAIN-SUFFIX,ninjacloak.com,Proxy
 DOMAIN-SUFFIX,ninjaproxy.ninja,Proxy
 DOMAIN-SUFFIX,nintendium.com,Proxy
 DOMAIN-SUFFIX,ninth.biz,Proxy
+DOMAIN-SUFFIX,nitter.net,Proxy
 DOMAIN-SUFFIX,niu.moe,Proxy
 DOMAIN-SUFFIX,niusnews.com,Proxy
 DOMAIN-SUFFIX,njactb.org,Proxy
@@ -55309,7 +55315,6 @@ DOMAIN-SUFFIX,rfaweb.org,Proxy
 DOMAIN-SUFFIX,rferl.org,Proxy
 DOMAIN-SUFFIX,rfi.fr,Proxy
 DOMAIN-SUFFIX,rfi.my,Proxy
-DOMAIN-SUFFIX,rg3.github.io,Proxy
 DOMAIN-SUFFIX,rightbtc.com,Proxy
 DOMAIN-SUFFIX,rigpa.org,Proxy
 DOMAIN-SUFFIX,riku.me,Proxy
@@ -55509,7 +55514,6 @@ DOMAIN-SUFFIX,sidelinessportseatery.com,Proxy
 DOMAIN-SUFFIX,sierrafriendsoftibet.org,Proxy
 DOMAIN-SUFFIX,sijihuisuo.club,Proxy
 DOMAIN-SUFFIX,sijihuisuo.com,Proxy
-DOMAIN-SUFFIX,sikaozhe1997.github.io,Proxy
 DOMAIN-SUFFIX,silkbook.com,Proxy
 DOMAIN-SUFFIX,simbolostwitter.com,Proxy
 DOMAIN-SUFFIX,simplecd.org,Proxy
@@ -55580,7 +55584,6 @@ DOMAIN-SUFFIX,sockscap64.com,Proxy
 DOMAIN-SUFFIX,sockslist.net,Proxy
 DOMAIN-SUFFIX,socrec.org,Proxy
 DOMAIN-SUFFIX,sod.co.jp,Proxy
-DOMAIN-SUFFIX,sodatea.github.io,Proxy
 DOMAIN-SUFFIX,softether-download.com,Proxy
 DOMAIN-SUFFIX,softether.co.jp,Proxy
 DOMAIN-SUFFIX,softether.org,Proxy
@@ -55861,7 +55864,6 @@ DOMAIN-SUFFIX,tellme.pw,Proxy
 DOMAIN-SUFFIX,tenacy.com,Proxy
 DOMAIN-SUFFIX,tensorflow.org,Proxy
 DOMAIN-SUFFIX,tenzinpalmo.com,Proxy
-DOMAIN-SUFFIX,terminus2049.github.io,Proxy
 DOMAIN-SUFFIX,tew.org,Proxy
 DOMAIN-SUFFIX,textnow.me,Proxy
 DOMAIN-SUFFIX,tfhub.dev,Proxy
@@ -56072,7 +56074,6 @@ DOMAIN-SUFFIX,torvpn.com,Proxy
 DOMAIN-SUFFIX,tosh.comedycentral.com,Proxy
 DOMAIN-SUFFIX,totalvpn.com,Proxy
 DOMAIN-SUFFIX,toutiaoabc.com,Proxy
-DOMAIN-SUFFIX,toutyrater.github.io,Proxy
 DOMAIN-SUFFIX,towngain.com,Proxy
 DOMAIN-SUFFIX,toypark.in,Proxy
 DOMAIN-SUFFIX,toythieves.com,Proxy
@@ -56690,7 +56691,6 @@ DOMAIN-SUFFIX,wqyd.org,Proxy
 DOMAIN-SUFFIX,wrchina.org,Proxy
 DOMAIN-SUFFIX,wretch.cc,Proxy
 DOMAIN-SUFFIX,writer.zoho.com,Proxy
-DOMAIN-SUFFIX,wsgzao.github.io,Proxy
 DOMAIN-SUFFIX,wsj.com,Proxy
 DOMAIN-SUFFIX,wsj.net,Proxy
 DOMAIN-SUFFIX,wsjhk.com,Proxy
