--- a/sr_top500_banlist_ad.conf
+++ b/sr_top500_banlist_ad.conf
@@ -1,5 +1,5 @@
 # Shadowrocket Rules by Skyrocketing Hong (https://github.com/skyrocketing1999/Shadowrocket-ADBlock-Rules)
-# build time: 2020-07-18 06:00:16
+# build time: 2020-07-19 06:00:13
 
 [General]
 bypass-system = true
@@ -52208,6 +52208,7 @@ DOMAIN-SUFFIX,cacnw.com,Proxy
 DOMAIN-SUFFIX,cactusvpn.com,Proxy
 DOMAIN-SUFFIX,cafepress.com,Proxy
 DOMAIN-SUFFIX,cahr.org.tw,Proxy
+DOMAIN-SUFFIX,caijinglengyan.com,Proxy
 DOMAIN-SUFFIX,calameo.com,Proxy
 DOMAIN-SUFFIX,calebelston.com,Proxy
 DOMAIN-SUFFIX,calgarychinese.ca,Proxy
@@ -53820,6 +53821,7 @@ DOMAIN-SUFFIX,huffingtonpost.com,Proxy
 DOMAIN-SUFFIX,hugoroy.eu,Proxy
 DOMAIN-SUFFIX,huhaitai.com,Proxy
 DOMAIN-SUFFIX,huhamhire.com,Proxy
+DOMAIN-SUFFIX,huhangfei.com,Proxy
 DOMAIN-SUFFIX,huiyi.in,Proxy
 DOMAIN-SUFFIX,hulkshare.com,Proxy
 DOMAIN-SUFFIX,hulu.com,Proxy
@@ -54974,6 +54976,7 @@ DOMAIN-SUFFIX,paperb.us,Proxy
 DOMAIN-SUFFIX,paradisehill.cc,Proxy
 DOMAIN-SUFFIX,paradisepoker.com,Proxy
 DOMAIN-SUFFIX,parkansky.com,Proxy
+DOMAIN-SUFFIX,parsevideo.com,Proxy
 DOMAIN-SUFFIX,partycasino.com,Proxy
 DOMAIN-SUFFIX,partypoker.com,Proxy
 DOMAIN-SUFFIX,passion.com,Proxy
@@ -55230,6 +55233,7 @@ DOMAIN-SUFFIX,r18.com,Proxy
 DOMAIN-SUFFIX,ra.gg,Proxy
 DOMAIN-SUFFIX,radicalparty.org,Proxy
 DOMAIN-SUFFIX,radiko.jp,Proxy
+DOMAIN-SUFFIX,radio.garden,Proxy
 DOMAIN-SUFFIX,radioaustralia.net.au,Proxy
 DOMAIN-SUFFIX,radiohilight.net,Proxy
 DOMAIN-SUFFIX,radiovaticana.org,Proxy
@@ -55501,6 +55505,7 @@ DOMAIN-SUFFIX,shkspr.mobi,Proxy
 DOMAIN-SUFFIX,shodanhq.com,Proxy
 DOMAIN-SUFFIX,shooshtime.com,Proxy
 DOMAIN-SUFFIX,shop2000.com.tw,Proxy
+DOMAIN-SUFFIX,shopee.tw,Proxy
 DOMAIN-SUFFIX,shopping.com,Proxy
 DOMAIN-SUFFIX,showbiz.omy.sg,Proxy
 DOMAIN-SUFFIX,showhaotu.com,Proxy
@@ -56060,7 +56065,6 @@ DOMAIN-SUFFIX,topshareware.com,Proxy
 DOMAIN-SUFFIX,topsy.com,Proxy
 DOMAIN-SUFFIX,toptip.ca,Proxy
 DOMAIN-SUFFIX,tor.blingblingsquad.net,Proxy
-DOMAIN-SUFFIX,tor.cn.uptodown.com,Proxy
 DOMAIN-SUFFIX,tor.updatestar.com,Proxy
 DOMAIN-SUFFIX,tora.to,Proxy
 DOMAIN-SUFFIX,torcn.com,Proxy
@@ -56335,6 +56339,7 @@ DOMAIN-SUFFIX,uploadstation.com,Proxy
 DOMAIN-SUFFIX,upmedia.mg,Proxy
 DOMAIN-SUFFIX,upornia.com,Proxy
 DOMAIN-SUFFIX,uproxy.org,Proxy
+DOMAIN-SUFFIX,uptodown.com,Proxy
 DOMAIN-SUFFIX,upwill.org,Proxy
 DOMAIN-SUFFIX,ur7s.com,Proxy
 DOMAIN-SUFFIX,uraban.me,Proxy
