--- a/sr_top500_banlist.conf
+++ b/sr_top500_banlist.conf
@@ -1,5 +1,5 @@
 # Shadowrocket Rules by Skyrocketing Hong (https://github.com/skyrocketing1999/Shadowrocket-ADBlock-Rules)
-# build time: 2020-07-19 06:00:13
+# build time: 2020-07-20 06:00:13
 
 [General]
 bypass-system = true
@@ -3079,6 +3079,7 @@ DOMAIN-SUFFIX,jwmusic.org,Proxy
 DOMAIN-SUFFIX,jyxf.net,Proxy
 DOMAIN-SUFFIX,k-doujin.net,Proxy
 DOMAIN-SUFFIX,ka-wai.com,Proxy
+DOMAIN-SUFFIX,kadokawa.co.jp,Proxy
 DOMAIN-SUFFIX,kagyu.org,Proxy
 DOMAIN-SUFFIX,kagyu.org.za,Proxy
 DOMAIN-SUFFIX,kagyumonlam.org,Proxy
