--- a/sr_top500_banlist_ad.conf
+++ b/sr_top500_banlist_ad.conf
@@ -1,5 +1,5 @@
 # Shadowrocket Rules by Skyrocketing Hong (https://github.com/skyrocketing1999/Shadowrocket-ADBlock-Rules)
-# build time: 2020-07-27 22:16:45
+# build time: 2020-07-27 22:29:57
 
 [General]
 bypass-system = true
@@ -19,6 +19,8 @@ DOMAIN-SUFFIX,gvt3.com,PROXY,force-remote-dns
 DOMAIN-SUFFIX,xn--ngstr-lra8j.com,PROXY,force-remote-dns
 DOMAIN-KEYWORD,google,PROXY,force-remote-dns
 DOMAIN-KEYWORD,blogspot,PROXY,force-remote-dns
+DOMAIN-KEYWORD,youtube,PROXY,force-remote-dns
+DOMAIN-KEYWORD,googleapis.com,PROXY,force-remote-dns
 # > Microsoft
 DOMAIN-SUFFIX,onedrive.live.com,PROXY,force-remote-dns
 DOMAIN-SUFFIX,xboxlive.com,PROXY,force-remote-dns
@@ -1101,7 +1103,7 @@ DOMAIN-SUFFIX,zbrushcn.com,Reject
 DOMAIN-SUFFIX,zhzzx.com,Reject
 
 
-# adblock rules refresh time: 2020-07-27 22:16:44
+# adblock rules refresh time: 2020-07-27 22:29:57
 DOMAIN-SUFFIX,0024aaaa.com,Reject
 DOMAIN-SUFFIX,0026645142c89aeb1.com,Reject
 DOMAIN-SUFFIX,003store.com,Reject
