--- a/sr_top500_banlist_ad.conf
+++ b/sr_top500_banlist_ad.conf
@@ -1,5 +1,5 @@
 # Shadowrocket Rules by Skyrocketing Hong (https://github.com/skyrocketing1999/Shadowrocket-ADBlock-Rules)
-# build time: 2020-07-27 22:29:57
+# build time: 2020-07-27 22:41:40
 
 [General]
 bypass-system = true
@@ -21,6 +21,8 @@ DOMAIN-KEYWORD,google,PROXY,force-remote-dns
 DOMAIN-KEYWORD,blogspot,PROXY,force-remote-dns
 DOMAIN-KEYWORD,youtube,PROXY,force-remote-dns
 DOMAIN-KEYWORD,googleapis.com,PROXY,force-remote-dns
+DOMAIN-KEYWORD,ytimg.com,PROXY,force-remote-dns
+DOMAIN-KEYWORD,ggpht.com,PROXY,force-remote-dns
 # > Microsoft
 DOMAIN-SUFFIX,onedrive.live.com,PROXY,force-remote-dns
 DOMAIN-SUFFIX,xboxlive.com,PROXY,force-remote-dns
@@ -1103,7 +1105,7 @@ DOMAIN-SUFFIX,zbrushcn.com,Reject
 DOMAIN-SUFFIX,zhzzx.com,Reject
 
 
-# adblock rules refresh time: 2020-07-27 22:29:57
+# adblock rules refresh time: 2020-07-27 22:41:39
 DOMAIN-SUFFIX,0024aaaa.com,Reject
 DOMAIN-SUFFIX,0026645142c89aeb1.com,Reject
 DOMAIN-SUFFIX,003store.com,Reject
