--- a/sr_top500_banlist_ad.conf
+++ b/sr_top500_banlist_ad.conf
@@ -1,5 +1,5 @@
 # Shadowrocket Rules by Skyrocketing Hong (https://github.com/skyrocketing1999/Shadowrocket-ADBlock-Rules)
-# build time: 2020-07-27 22:41:40
+# build time: 2020-07-28 06:00:24
 
 [General]
 bypass-system = true
@@ -1105,7 +1105,7 @@ DOMAIN-SUFFIX,zbrushcn.com,Reject
 DOMAIN-SUFFIX,zhzzx.com,Reject
 
 
-# adblock rules refresh time: 2020-07-27 22:41:39
+# adblock rules refresh time: 2020-07-28 06:00:24
 DOMAIN-SUFFIX,0024aaaa.com,Reject
 DOMAIN-SUFFIX,0026645142c89aeb1.com,Reject
 DOMAIN-SUFFIX,003store.com,Reject
@@ -1244,6 +1244,7 @@ DOMAIN-SUFFIX,1.11467.com,Reject
 DOMAIN-SUFFIX,1.15lu.com,Reject
 DOMAIN-SUFFIX,1.201980.com,Reject
 DOMAIN-SUFFIX,1.32xp.com,Reject
+DOMAIN-SUFFIX,1.5000yan.com,Reject
 DOMAIN-SUFFIX,1.51sxue.cn,Reject
 DOMAIN-SUFFIX,1.66law.cn,Reject
 DOMAIN-SUFFIX,1.800400.net,Reject
@@ -2628,6 +2629,7 @@ DOMAIN-SUFFIX,a.xanga.com,Reject
 DOMAIN-SUFFIX,a.xixiyishu.com,Reject
 DOMAIN-SUFFIX,a.xuezizhai.com,Reject
 DOMAIN-SUFFIX,a.xywy.com,Reject
+DOMAIN-SUFFIX,a.xzzsjz.com,Reject
 DOMAIN-SUFFIX,a.yangshengtang123.com,Reject
 DOMAIN-SUFFIX,a.yellowurl.cn,Reject
 DOMAIN-SUFFIX,a.youdao.com,Reject
@@ -6629,6 +6631,7 @@ DOMAIN-SUFFIX,apexstats.com,Reject
 DOMAIN-SUFFIX,apextag.com,Reject
 DOMAIN-SUFFIX,apextwo.com,Reject
 DOMAIN-SUFFIX,apfbtiqdly.bid,Reject
+DOMAIN-SUFFIX,aphicbouncil.club,Reject
 DOMAIN-SUFFIX,aphookkensidah.pro,Reject
 DOMAIN-SUFFIX,aphycolourses.info,Reject
 DOMAIN-SUFFIX,api-a.op-mobile.opera.com,Reject
@@ -10011,6 +10014,7 @@ DOMAIN-SUFFIX,cellorun.info,Reject
 DOMAIN-SUFFIX,celltick.com,Reject
 DOMAIN-SUFFIX,celtra.com,Reject
 DOMAIN-SUFFIX,cematuran.com,Reject
+DOMAIN-SUFFIX,cenceevent.club,Reject
 DOMAIN-SUFFIX,cenessdise.info,Reject
 DOMAIN-SUFFIX,centent.streamp1ay.cc,Reject
 DOMAIN-SUFFIX,center.io,Reject
@@ -10168,6 +10172,7 @@ DOMAIN-SUFFIX,chartbeat.com,Reject
 DOMAIN-SUFFIX,chartbeat.net,Reject
 DOMAIN-SUFFIX,chartboost.com,Reject
 DOMAIN-SUFFIX,chartboosts.com,Reject
+DOMAIN-SUFFIX,chatintr.com,Reject
 DOMAIN-SUFFIX,chatzoe.de,Reject
 DOMAIN-SUFFIX,chaufoox.net,Reject
 DOMAIN-SUFFIX,chauksoa.net,Reject
@@ -12702,6 +12707,7 @@ DOMAIN-SUFFIX,deliver.vkcdnservice.com,Reject
 DOMAIN-SUFFIX,delivery.adrecover.com,Reject
 DOMAIN-SUFFIX,delivery.adten.eu,Reject
 DOMAIN-SUFFIX,delivery.content-recommendation.net,Reject
+DOMAIN-SUFFIX,delivery.fabrouter.com,Reject
 DOMAIN-SUFFIX,delivery.playallvideos.com,Reject
 DOMAIN-SUFFIX,delivery.porn.com,Reject
 DOMAIN-SUFFIX,delivery.senvangvn.com,Reject
@@ -12771,6 +12777,7 @@ DOMAIN-SUFFIX,desertedbreath.com,Reject
 DOMAIN-SUFFIX,desertedrat.com,Reject
 DOMAIN-SUFFIX,desiasm.club,Reject
 DOMAIN-SUFFIX,desigactinific.pro,Reject
+DOMAIN-SUFFIX,desinferbe.club,Reject
 DOMAIN-SUFFIX,desipearl.com,Reject
 DOMAIN-SUFFIX,desire-xx.net,Reject
 DOMAIN-SUFFIX,desiredirt.com,Reject
@@ -13903,6 +13910,7 @@ DOMAIN-SUFFIX,eatayvgov.com,Reject
 DOMAIN-SUFFIX,eatmenticha.top,Reject
 DOMAIN-SUFFIX,eatp.evztib.xyz,Reject
 DOMAIN-SUFFIX,eatxurmf.com,Reject
+DOMAIN-SUFFIX,eatyfailiffacc.club,Reject
 DOMAIN-SUFFIX,eayyegrkujxcw.com,Reject
 DOMAIN-SUFFIX,eazyleads.com,Reject
 DOMAIN-SUFFIX,ebahpya.com,Reject
@@ -14914,6 +14922,7 @@ DOMAIN-SUFFIX,exmarketplace.com,Reject
 DOMAIN-SUFFIX,exmarkt.de,Reject
 DOMAIN-SUFFIX,exnzg.de,Reject
 DOMAIN-SUFFIX,exo.kiev.ua,Reject
+DOMAIN-SUFFIX,exobafrgdf.com,Reject
 DOMAIN-SUFFIX,exoclick.com,Reject
 DOMAIN-SUFFIX,exoclsodaqs.com,Reject
 DOMAIN-SUFFIX,exogripper.com,Reject
@@ -15768,6 +15777,7 @@ DOMAIN-SUFFIX,forcetraf.com,Reject
 DOMAIN-SUFFIX,forecast.analytiall.com,Reject
 DOMAIN-SUFFIX,forecasttiger.com,Reject
 DOMAIN-SUFFIX,foregoingfowl.com,Reject
+DOMAIN-SUFFIX,foreignsec.club,Reject
 DOMAIN-SUFFIX,forensics1000.com,Reject
 DOMAIN-SUFFIX,foresee.com,Reject
 DOMAIN-SUFFIX,foreseeresults.com,Reject
@@ -16333,6 +16343,7 @@ DOMAIN-SUFFIX,game-clicks.com,Reject
 DOMAIN-SUFFIX,game-tester.ru,Reject
 DOMAIN-SUFFIX,game.gamingnonstop.net,Reject
 DOMAIN-SUFFIX,game.vulcan-casino.com,Reject
+DOMAIN-SUFFIX,game527.cn,Reject
 DOMAIN-SUFFIX,gameads.com,Reject
 DOMAIN-SUFFIX,gameads.net,Reject
 DOMAIN-SUFFIX,gameanalisys.appcpi.net,Reject
@@ -16734,6 +16745,7 @@ DOMAIN-SUFFIX,giantaffiliates.com,Reject
 DOMAIN-SUFFIX,giddycoat.com,Reject
 DOMAIN-SUFFIX,giddyuptrk.com,Reject
 DOMAIN-SUFFIX,giecsodzyl.com,Reject
+DOMAIN-SUFFIX,gievalonjing.club,Reject
 DOMAIN-SUFFIX,gifiqbbfvh.com,Reject
 DOMAIN-SUFFIX,gifjvmfkzykp.com,Reject
 DOMAIN-SUFFIX,giga-abs.de,Reject
@@ -22536,6 +22548,7 @@ DOMAIN-SUFFIX,lopuut.ru,Reject
 DOMAIN-SUFFIX,lopzitpup.com,Reject
 DOMAIN-SUFFIX,loqara.info,Reject
 DOMAIN-SUFFIX,lorahana.xyz,Reject
+DOMAIN-SUFFIX,lorassocialgr.club,Reject
 DOMAIN-SUFFIX,lordofads.com,Reject
 DOMAIN-SUFFIX,lore.circulate.com,Reject
 DOMAIN-SUFFIX,lorenzourban.com,Reject
@@ -23878,6 +23891,7 @@ DOMAIN-SUFFIX,minewhat.com,Reject
 DOMAIN-SUFFIX,minexmr.stream,Reject
 DOMAIN-SUFFIX,mingbangzichan.com,Reject
 DOMAIN-SUFFIX,mingboxieye.com,Reject
+DOMAIN-SUFFIX,minglongtea.cn,Reject
 DOMAIN-SUFFIX,mingysh.com,Reject
 DOMAIN-SUFFIX,mini.hao123.com,Reject
 DOMAIN-SUFFIX,minidoc.ru,Reject
@@ -25596,6 +25610,7 @@ DOMAIN-SUFFIX,nostalgia.onego.ru,Reject
 DOMAIN-SUFFIX,not-only.info,Reject
 DOMAIN-SUFFIX,notbad-ads.com,Reject
 DOMAIN-SUFFIX,notenpartner.de,Reject
+DOMAIN-SUFFIX,notestscredi.club,Reject
 DOMAIN-SUFFIX,notice.uchome.manyou.com,Reject
 DOMAIN-SUFFIX,notifadz.com,Reject
 DOMAIN-SUFFIX,notification-centar.com,Reject
@@ -26191,6 +26206,7 @@ DOMAIN-SUFFIX,ogt.jp,Reject
 DOMAIN-SUFFIX,ogvrdxjcgzst.com,Reject
 DOMAIN-SUFFIX,ogwykjkqbhf.com,Reject
 DOMAIN-SUFFIX,ogysevery.site,Reject
+DOMAIN-SUFFIX,ohbayersbur.pro,Reject
 DOMAIN-SUFFIX,ohchat.net,Reject
 DOMAIN-SUFFIX,ohcohz.stroeerdp.de,Reject
 DOMAIN-SUFFIX,ohdoxowrbkyd.com,Reject
@@ -26865,6 +26881,7 @@ DOMAIN-SUFFIX,oumazg.com,Reject
 DOMAIN-SUFFIX,ounaihekw.bid,Reject
 DOMAIN-SUFFIX,ouncialliberte.site,Reject
 DOMAIN-SUFFIX,ountapaveralle.info,Reject
+DOMAIN-SUFFIX,ountryvener.club,Reject
 DOMAIN-SUFFIX,ounyrilukncbj.com,Reject
 DOMAIN-SUFFIX,oupe71eiun.com,Reject
 DOMAIN-SUFFIX,oupox.club,Reject
@@ -27261,6 +27278,7 @@ DOMAIN-SUFFIX,parkingcrew.net,Reject
 DOMAIN-SUFFIX,parklogic.com,Reject
 DOMAIN-SUFFIX,parlaka.com,Reject
 DOMAIN-SUFFIX,parnuxi.biz,Reject
+DOMAIN-SUFFIX,parpapsit.com,Reject
 DOMAIN-SUFFIX,parrable.com,Reject
 DOMAIN-SUFFIX,parromlethowsit.info,Reject
 DOMAIN-SUFFIX,parronnotandone.info,Reject
@@ -28048,6 +28066,7 @@ DOMAIN-SUFFIX,placeiq.com,Reject
 DOMAIN-SUFFIX,placemypixel.com,Reject
 DOMAIN-SUFFIX,placeoff.ru,Reject
 DOMAIN-SUFFIX,placeplay.com,Reject
+DOMAIN-SUFFIX,plainplayground.com,Reject
 DOMAIN-SUFFIX,planetactive.com,Reject
 DOMAIN-SUFFIX,planetapozitiva.ru,Reject
 DOMAIN-SUFFIX,planetup.com,Reject
@@ -29257,6 +29276,7 @@ DOMAIN-SUFFIX,qaxtgbdxjpibc.com,Reject
 DOMAIN-SUFFIX,qaykb.com,Reject
 DOMAIN-SUFFIX,qbaka.net,Reject
 DOMAIN-SUFFIX,qbbnixdd.com,Reject
+DOMAIN-SUFFIX,qbczpo.cn,Reject
 DOMAIN-SUFFIX,qbddhjrwe.com,Reject
 DOMAIN-SUFFIX,qbeoyasaiz.com,Reject
 DOMAIN-SUFFIX,qbfzmwamsid.com,Reject
@@ -33295,6 +33315,7 @@ DOMAIN-SUFFIX,static.mvot.vn,Reject
 DOMAIN-SUFFIX,static.parsely.com,Reject
 DOMAIN-SUFFIX,static.prototypes.ru,Reject
 DOMAIN-SUFFIX,static.scroll.com,Reject
+DOMAIN-SUFFIX,static.selfpuc.com,Reject
 DOMAIN-SUFFIX,static.terrhq.ru,Reject
 DOMAIN-SUFFIX,static.thedevband.com,Reject
 DOMAIN-SUFFIX,staticad.thethao247.vn,Reject
@@ -34180,6 +34201,7 @@ DOMAIN-SUFFIX,t70123.com,Reject
 DOMAIN-SUFFIX,t7z.cupid.iqiyi.com,Reject
 DOMAIN-SUFFIX,ta.queit.in,Reject
 DOMAIN-SUFFIX,ta.trs.cn,Reject
+DOMAIN-SUFFIX,ta69999.com,Reject
 DOMAIN-SUFFIX,tabici.com,Reject
 DOMAIN-SUFFIX,tablet.gutterhelment.net,Reject
 DOMAIN-SUFFIX,tabookbusines.info,Reject
@@ -34265,6 +34287,7 @@ DOMAIN-SUFFIX,talk2none.com,Reject
 DOMAIN-SUFFIX,talk4anyone.com,Reject
 DOMAIN-SUFFIX,talk99.cn,Reject
 DOMAIN-SUFFIX,talkfusion.com,Reject
+DOMAIN-SUFFIX,talkmego.com,Reject
 DOMAIN-SUFFIX,talysu.info,Reject
 DOMAIN-SUFFIX,tamechangekn.info,Reject
 DOMAIN-SUFFIX,tamedia.ch,Reject
@@ -34287,6 +34310,7 @@ DOMAIN-SUFFIX,tantheretrec.ru,Reject
 DOMAIN-SUFFIX,tantractium.com,Reject
 DOMAIN-SUFFIX,taobao.qq.com,Reject
 DOMAIN-SUFFIX,taobaoaliyun.cn,Reject
+DOMAIN-SUFFIX,taobaocoupon.cn,Reject
 DOMAIN-SUFFIX,taobaojx.com,Reject
 DOMAIN-SUFFIX,taobayun.cn,Reject
 DOMAIN-SUFFIX,taodropship.com,Reject
@@ -38700,6 +38724,8 @@ DOMAIN-SUFFIX,widefox.ru,Reject
 DOMAIN-SUFFIX,widerplanet.com,Reject
 DOMAIN-SUFFIX,widespace.com,Reject
 DOMAIN-SUFFIX,widetunel.ru,Reject
+DOMAIN-SUFFIX,widget-view.dmm.co.jp,Reject
+DOMAIN-SUFFIX,widget-view.dmm.com,Reject
 DOMAIN-SUFFIX,widget.convertiser.com,Reject
 DOMAIN-SUFFIX,widget.headlines.pw,Reject
 DOMAIN-SUFFIX,widget.market-place.su,Reject
