--- a/sr_top500_banlist_ad.conf
+++ b/sr_top500_banlist_ad.conf
@@ -1,10 +1,10 @@
 # Shadowrocket Rules by Skyrocketing Hong (https://github.com/skyrocketing1999/Shadowrocket-ADBlock-Rules)
-# build time: 2020-07-28 10:04:41
+# build time: 2020-07-28 10:23:02
 
 [General]
 bypass-system = true
-skip-proxy = 192.168.0.0/16, 10.0.0.0/8, 172.16.0.0/12, localhost, *.local, e.crashlytics.com, captive.apple.com, 17.0.0.0/8
-bypass-tun = 10.0.0.0/8,100.64.0.0/10,127.0.0.0/8,169.254.0.0/16,172.16.0.0/12,192.0.0.0/24,192.0.2.0/24,192.88.99.0/24,192.168.0.0/16,198.18.0.0/15,198.51.100.0/24,203.0.113.0/24,224.0.0.0/4,255.255.255.255/32,17.0.0.0/8
+skip-proxy = 192.168.0.0/16, 10.0.0.0/8, 172.16.0.0/12, localhost, *.local, e.crashlytics.com, captive.apple.com
+bypass-tun = 10.0.0.0/8,100.64.0.0/10,127.0.0.0/8,169.254.0.0/16,172.16.0.0/12,192.0.0.0/24,192.0.2.0/24,192.88.99.0/24,192.168.0.0/16,198.18.0.0/15,198.51.100.0/24,203.0.113.0/24,224.0.0.0/4,255.255.255.255/32
 dns-server = https://dns.alidns.com/dns-query, https://doh.pub/dns-query, system
 [Rule]
 # (DNS Cache Pollution Protection)
@@ -1102,7 +1102,7 @@ DOMAIN-SUFFIX,zbrushcn.com,Reject
 DOMAIN-SUFFIX,zhzzx.com,Reject
 
 
-# adblock rules refresh time: 2020-07-28 10:04:41
+# adblock rules refresh time: 2020-07-28 10:23:02
 DOMAIN-SUFFIX,0024aaaa.com,Reject
 DOMAIN-SUFFIX,0026645142c89aeb1.com,Reject
 DOMAIN-SUFFIX,003store.com,Reject
@@ -46962,7 +46962,7 @@ DOMAIN-SUFFIX,news.ycombinator.com,PROXY,force-remote-dns
 
 
 FINAL,direct
-
+GEOIP,CN,DIRECT
 [URL Rewrite]
 ^http://(www.)?google.cn https://www.google.com 302
 ^https?:\/\/(www.)?(g|google)\.cn https://www.google.com 302
