--- a/sr_top500_banlist_ad.conf
+++ b/sr_top500_banlist_ad.conf
@@ -1,5 +1,5 @@
 # Shadowrocket Rules by Skyrocketing Hong (https://github.com/skyrocketing1999/Shadowrocket-ADBlock-Rules)
-# build time: 2020-07-31 06:00:25
+# build time: 2020-08-01 06:00:24
 
 [General]
 bypass-system = true
@@ -1102,7 +1102,7 @@ DOMAIN-SUFFIX,zbrushcn.com,Reject
 DOMAIN-SUFFIX,zhzzx.com,Reject
 
 
-# adblock rules refresh time: 2020-07-31 06:00:25
+# adblock rules refresh time: 2020-08-01 06:00:24
 DOMAIN-SUFFIX,0024aaaa.com,Reject
 DOMAIN-SUFFIX,0026645142c89aeb1.com,Reject
 DOMAIN-SUFFIX,003store.com,Reject
@@ -1218,6 +1218,7 @@ DOMAIN-SUFFIX,0gw7e6s3wrao9y3q.pro,Reject
 DOMAIN-SUFFIX,0j7z9aw6.top,Reject
 DOMAIN-SUFFIX,0jkro0unul.execute-api.us-west-2.amazonaws.com,Reject
 DOMAIN-SUFFIX,0klxjejyxak3.com,Reject
+DOMAIN-SUFFIX,0mr.cc,Reject
 DOMAIN-SUFFIX,0oaqgsk54hm5.com,Reject
 DOMAIN-SUFFIX,0pixl.com,Reject
 DOMAIN-SUFFIX,0qkc.cn,Reject
@@ -1744,6 +1745,7 @@ DOMAIN-SUFFIX,36pn.com,Reject
 DOMAIN-SUFFIX,36robots.com,Reject
 DOMAIN-SUFFIX,3761fcd24ef9281f5.com,Reject
 DOMAIN-SUFFIX,376zf.com,Reject
+DOMAIN-SUFFIX,37cs.com,Reject
 DOMAIN-SUFFIX,384756783900.cn,Reject
 DOMAIN-SUFFIX,38486e2886986.com,Reject
 DOMAIN-SUFFIX,386704cb2300cf1a.com,Reject
@@ -2228,6 +2230,7 @@ DOMAIN-SUFFIX,789.fun,Reject
 DOMAIN-SUFFIX,7891655.cn,Reject
 DOMAIN-SUFFIX,78tdd75.com,Reject
 DOMAIN-SUFFIX,799f3607457e.com,Reject
+DOMAIN-SUFFIX,79k52baw2qa3.com,Reject
 DOMAIN-SUFFIX,79t2.admaster.com.cn,Reject
 DOMAIN-SUFFIX,79ucic4ss8.com,Reject
 DOMAIN-SUFFIX,79zgycmr.com,Reject
@@ -2907,6 +2910,7 @@ DOMAIN-SUFFIX,accesstrade.net,Reject
 DOMAIN-SUFFIX,accesstrade.vn,Reject
 DOMAIN-SUFFIX,accio.ai,Reject
 DOMAIN-SUFFIX,accmgr.com,Reject
+DOMAIN-SUFFIX,accoladebestiality.com,Reject
 DOMAIN-SUFFIX,accomment.pro,Reject
 DOMAIN-SUFFIX,accompathych.site,Reject
 DOMAIN-SUFFIX,accountestatees.info,Reject
@@ -6444,6 +6448,7 @@ DOMAIN-SUFFIX,analytics.vnreview.vn,Reject
 DOMAIN-SUFFIX,analytics.vodgc.net,Reject
 DOMAIN-SUFFIX,analytics.volvocars.com,Reject
 DOMAIN-SUFFIX,analytics.vooxe.com,Reject
+DOMAIN-SUFFIX,analytics.webads.eu,Reject
 DOMAIN-SUFFIX,analytics.webgains.io,Reject
 DOMAIN-SUFFIX,analytics.websolute.it,Reject
 DOMAIN-SUFFIX,analytics.wetpaint.me,Reject
@@ -6702,6 +6707,7 @@ DOMAIN-SUFFIX,api.share.mob.com,Reject
 DOMAIN-SUFFIX,api.smartadv.ru,Reject
 DOMAIN-SUFFIX,api.splkmobile.com,Reject
 DOMAIN-SUFFIX,api.taplytics.com,Reject
+DOMAIN-SUFFIX,api.tidint.pro,Reject
 DOMAIN-SUFFIX,api.triver.jp,Reject
 DOMAIN-SUFFIX,api.uca.cloud.unity3d.com,Reject
 DOMAIN-SUFFIX,api.unthem.com,Reject
@@ -7594,6 +7600,7 @@ DOMAIN-SUFFIX,b56f9c50130def4d.com,Reject
 DOMAIN-SUFFIX,b588866.com,Reject
 DOMAIN-SUFFIX,b59812ee54afcabd.com,Reject
 DOMAIN-SUFFIX,b5ae848728034caddca.com,Reject
+DOMAIN-SUFFIX,b6.d99sure.xyz,Reject
 DOMAIN-SUFFIX,b60228e270e363f6.com,Reject
 DOMAIN-SUFFIX,b6aa6257a22451c.com,Reject
 DOMAIN-SUFFIX,b6roqgi.com,Reject
@@ -8461,6 +8468,7 @@ DOMAIN-SUFFIX,bid.run,Reject
 DOMAIN-SUFFIX,bidadx.com,Reject
 DOMAIN-SUFFIX,bidclix.com,Reject
 DOMAIN-SUFFIX,bidclix.net,Reject
+DOMAIN-SUFFIX,bidder.dev,Reject
 DOMAIN-SUFFIX,bidder.mdspinc.com,Reject
 DOMAIN-SUFFIX,bidder.mediams.mb.softbank.jp,Reject
 DOMAIN-SUFFIX,bidderrtb.com,Reject
@@ -8550,6 +8558,7 @@ DOMAIN-SUFFIX,binaryad.com,Reject
 DOMAIN-SUFFIX,binarybusiness.de,Reject
 DOMAIN-SUFFIX,binarymoney.site,Reject
 DOMAIN-SUFFIX,binchoise.ml,Reject
+DOMAIN-SUFFIX,binetsrealing.club,Reject
 DOMAIN-SUFFIX,bing0.ru,Reject
 DOMAIN-SUFFIX,bingdiantao.com,Reject
 DOMAIN-SUFFIX,bingo4affiliates.com,Reject
@@ -9526,6 +9535,7 @@ DOMAIN-SUFFIX,caanalytics.com,Reject
 DOMAIN-SUFFIX,caaqyzbpsbtk.com,Reject
 DOMAIN-SUFFIX,cab-too-low.com,Reject
 DOMAIN-SUFFIX,cabomarlinisportfishing.com,Reject
+DOMAIN-SUFFIX,cabresenalitie.club,Reject
 DOMAIN-SUFFIX,cacafly.net,Reject
 DOMAIN-SUFFIX,cacfbf85ad2005e4c31.com,Reject
 DOMAIN-SUFFIX,cache.addthiscdn.com,Reject
@@ -9731,6 +9741,7 @@ DOMAIN-SUFFIX,casinotraffic.com,Reject
 DOMAIN-SUFFIX,casinotreasure.com,Reject
 DOMAIN-SUFFIX,caspion.com,Reject
 DOMAIN-SUFFIX,caspionlog.appspot.com,Reject
+DOMAIN-SUFFIX,casseroleenvioustransgress.com,Reject
 DOMAIN-SUFFIX,cassns.pro,Reject
 DOMAIN-SUFFIX,castelein.nu,Reject
 DOMAIN-SUFFIX,casterist.info,Reject
@@ -10193,6 +10204,7 @@ DOMAIN-SUFFIX,chayibu.com,Reject
 DOMAIN-SUFFIX,chdaismlykqep.com,Reject
 DOMAIN-SUFFIX,cheap-ads.net,Reject
 DOMAIN-SUFFIX,cheaptop.ru,Reject
+DOMAIN-SUFFIX,check-now.online,Reject
 DOMAIN-SUFFIX,check-updates.net,Reject
 DOMAIN-SUFFIX,checkabil.com,Reject
 DOMAIN-SUFFIX,checkapi.xyz,Reject
@@ -10463,6 +10475,7 @@ DOMAIN-SUFFIX,cleaneryelded.site,Reject
 DOMAIN-SUFFIX,clear-request.com,Reject
 DOMAIN-SUFFIX,clearac.com,Reject
 DOMAIN-SUFFIX,clearadnetwork.com,Reject
+DOMAIN-SUFFIX,clearant.club,Reject
 DOMAIN-SUFFIX,clearbid.uberads.com,Reject
 DOMAIN-SUFFIX,clearcomb.com,Reject
 DOMAIN-SUFFIX,clearonclick.com,Reject
@@ -12519,6 +12532,7 @@ DOMAIN-SUFFIX,dataxpand.com,Reject
 DOMAIN-SUFFIX,dataxu.com,Reject
 DOMAIN-SUFFIX,datcuoc247.com,Reject
 DOMAIN-SUFFIX,date.cursorinfo.co.il,Reject
+DOMAIN-SUFFIX,datedissyuk.icu,Reject
 DOMAIN-SUFFIX,dating-banners.com,Reject
 DOMAIN-SUFFIX,dating-cart.com,Reject
 DOMAIN-SUFFIX,dating-exchange.com,Reject
@@ -14639,6 +14653,7 @@ DOMAIN-SUFFIX,estadisticasgratis.es,Reject
 DOMAIN-SUFFIX,estafair.com,Reject
 DOMAIN-SUFFIX,estara.com,Reject
 DOMAIN-SUFFIX,estat.com,Reject
+DOMAIN-SUFFIX,esteemencyclopediagodmother.com,Reject
 DOMAIN-SUFFIX,estersparat.club,Reject
 DOMAIN-SUFFIX,estionexperime.info,Reject
 DOMAIN-SUFFIX,estiques.com,Reject
@@ -15555,6 +15570,7 @@ DOMAIN-SUFFIX,firebanner.com,Reject
 DOMAIN-SUFFIX,firefeeder.com,Reject
 DOMAIN-SUFFIX,fireflyengagement.com,Reject
 DOMAIN-SUFFIX,firelove.ru,Reject
+DOMAIN-SUFFIX,firewoodnativewoodlands.com,Reject
 DOMAIN-SUFFIX,firm.bidtizadd.ru,Reject
 DOMAIN-SUFFIX,firoznadiadwala.com,Reject
 DOMAIN-SUFFIX,first-rate.com,Reject
@@ -16100,6 +16116,7 @@ DOMAIN-SUFFIX,fufoatch.com,Reject
 DOMAIN-SUFFIX,fugetech.com,Reject
 DOMAIN-SUFFIX,fugqzoijct.com,Reject
 DOMAIN-SUFFIX,fuguilm.com,Reject
+DOMAIN-SUFFIX,fuhaimuye.cn,Reject
 DOMAIN-SUFFIX,fuhuikang360.com,Reject
 DOMAIN-SUFFIX,fuialqqq.com,Reject
 DOMAIN-SUFFIX,fujianryt.com,Reject
@@ -16130,6 +16147,7 @@ DOMAIN-SUFFIX,fuojuw.com,Reject
 DOMAIN-SUFFIX,fupgvldb.com,Reject
 DOMAIN-SUFFIX,furocmay.com,Reject
 DOMAIN-SUFFIX,furtherescottom.info,Reject
+DOMAIN-SUFFIX,furwayfareracerbity.com,Reject
 DOMAIN-SUFFIX,fuse-data.com,Reject
 DOMAIN-SUFFIX,fuseplatform.net,Reject
 DOMAIN-SUFFIX,fusestats.com,Reject
@@ -16419,6 +16437,7 @@ DOMAIN-SUFFIX,garrogy.info,Reject
 DOMAIN-SUFFIX,garss.jp,Reject
 DOMAIN-SUFFIX,gasolina.ml,Reject
 DOMAIN-SUFFIX,gasxf.com,Reject
+DOMAIN-SUFFIX,gatetocontent.com,Reject
 DOMAIN-SUFFIX,gateway.foresee.com,Reject
 DOMAIN-SUFFIX,gateway.ttpsdk.info,Reject
 DOMAIN-SUFFIX,gatewey.net,Reject
@@ -16552,7 +16571,6 @@ DOMAIN-SUFFIX,geniusdexchange.com,Reject
 DOMAIN-SUFFIX,geniusdisplay.com,Reject
 DOMAIN-SUFFIX,geniusonclick.com,Reject
 DOMAIN-SUFFIX,genmonet.com,Reject
-DOMAIN-SUFFIX,gentags.net,Reject
 DOMAIN-SUFFIX,gentlemenius.com,Reject
 DOMAIN-SUFFIX,geo-idm.fr,Reject
 DOMAIN-SUFFIX,geo-targetly.com,Reject
@@ -16940,6 +16958,7 @@ DOMAIN-SUFFIX,glomseci.com,Reject
 DOMAIN-SUFFIX,glookalr.com,Reject
 DOMAIN-SUFFIX,glookroz.net,Reject
 DOMAIN-SUFFIX,gloolsee.net,Reject
+DOMAIN-SUFFIX,gloomilypainkiller.com,Reject
 DOMAIN-SUFFIX,gloorajo.com,Reject
 DOMAIN-SUFFIX,glordd.com,Reject
 DOMAIN-SUFFIX,glorinlost.rocks,Reject
@@ -17883,6 +17902,7 @@ DOMAIN-SUFFIX,he2d.com,Reject
 DOMAIN-SUFFIX,heaaizwhm.com,Reject
 DOMAIN-SUFFIX,headbidder.net,Reject
 DOMAIN-SUFFIX,header.tech,Reject
+DOMAIN-SUFFIX,headerlift.com,Reject
 DOMAIN-SUFFIX,headlinerlabs.com,Reject
 DOMAIN-SUFFIX,headlinesnetwork.com,Reject
 DOMAIN-SUFFIX,headquartersbanishspook.com,Reject
@@ -18105,7 +18125,6 @@ DOMAIN-SUFFIX,hindisupref.ru,Reject
 DOMAIN-SUFFIX,hindsight.significanceapps.com,Reject
 DOMAIN-SUFFIX,hindurinning.pro,Reject
 DOMAIN-SUFFIX,hiopdi.com,Reject
-DOMAIN-SUFFIX,hiorange1.jobui.com,Reject
 DOMAIN-SUFFIX,hiperstat.com,Reject
 DOMAIN-SUFFIX,hipersushiads.com,Reject
 DOMAIN-SUFFIX,hipfowlzeal.cam,Reject
@@ -18352,7 +18371,6 @@ DOMAIN-SUFFIX,hoo1luha.com,Reject
 DOMAIN-SUFFIX,hoochoor.com,Reject
 DOMAIN-SUFFIX,hoohavoa.com,Reject
 DOMAIN-SUFFIX,hooify.com,Reject
-DOMAIN-SUFFIX,hooligapps.com,Reject
 DOMAIN-SUFFIX,hoolyfy.com,Reject
 DOMAIN-SUFFIX,hoood.info,Reject
 DOMAIN-SUFFIX,hooraico.com,Reject
@@ -18585,6 +18603,7 @@ DOMAIN-SUFFIX,huccrlctmgifs.com,Reject
 DOMAIN-SUFFIX,huckauhy.com,Reject
 DOMAIN-SUFFIX,huctgggrvw.com,Reject
 DOMAIN-SUFFIX,hudb.pl,Reject
+DOMAIN-SUFFIX,hudxqjg.cn,Reject
 DOMAIN-SUFFIX,hueekqx.cn,Reject
 DOMAIN-SUFFIX,huffson-delivery.com,Reject
 DOMAIN-SUFFIX,hugeincome.cf,Reject
@@ -19110,6 +19129,7 @@ DOMAIN-SUFFIX,ikvagxovc.com,Reject
 DOMAIN-SUFFIX,ikwxqqaduybfnv.com,Reject
 DOMAIN-SUFFIX,ikxgvhdw.com,Reject
 DOMAIN-SUFFIX,ikyzcnyqkzctm.com,Reject
+DOMAIN-SUFFIX,il05pzhujicf.com,Reject
 DOMAIN-SUFFIX,il8r.com,Reject
 DOMAIN-SUFFIX,ilaantxayy.com,Reject
 DOMAIN-SUFFIX,ilbanner.com,Reject
@@ -19281,6 +19301,7 @@ DOMAIN-SUFFIX,impressionmedia.cz,Reject
 DOMAIN-SUFFIX,impressionperformance.biz,Reject
 DOMAIN-SUFFIX,impressionsme.net,Reject
 DOMAIN-SUFFIX,impressionz.co.uk,Reject
+DOMAIN-SUFFIX,improvedigital.com,Reject
 DOMAIN-SUFFIX,improvely.com,Reject
 DOMAIN-SUFFIX,impulsehands.com,Reject
 DOMAIN-SUFFIX,impulsejewel.com,Reject
@@ -19484,6 +19505,7 @@ DOMAIN-SUFFIX,insitez.blob.core.windows.net,Reject
 DOMAIN-SUFFIX,inskin.vo.llnwd.net,Reject
 DOMAIN-SUFFIX,inskinad.com,Reject
 DOMAIN-SUFFIX,inskinmedia.com,Reject
+DOMAIN-SUFFIX,insnative.com,Reject
 DOMAIN-SUFFIX,inspectlet.com,Reject
 DOMAIN-SUFFIX,inspectorclick.com,Reject
 DOMAIN-SUFFIX,inspikon.com,Reject
@@ -19702,6 +19724,7 @@ DOMAIN-SUFFIX,ipgp.net,Reject
 DOMAIN-SUFFIX,iphliojn.com,Reject
 DOMAIN-SUFFIX,iphonetopsite.ru,Reject
 DOMAIN-SUFFIX,ipiakraazowdui.com,Reject
+DOMAIN-SUFFIX,ipiech.com,Reject
 DOMAIN-SUFFIX,ipinfodb.com,Reject
 DOMAIN-SUFFIX,ipinyou.com,Reject
 DOMAIN-SUFFIX,ipinyou.com.cn,Reject
@@ -20178,6 +20201,7 @@ DOMAIN-SUFFIX,jet.zbp.ru,Reject
 DOMAIN-SUFFIX,jetcounter.ru,Reject
 DOMAIN-SUFFIX,jetlore.com,Reject
 DOMAIN-SUFFIX,jetmhrcy.com,Reject
+DOMAIN-SUFFIX,jetsowilk.com,Reject
 DOMAIN-SUFFIX,jettags.rocks,Reject
 DOMAIN-SUFFIX,jevqbzflcbcpz.com,Reject
 DOMAIN-SUFFIX,jevxjcdnrd.com,Reject
@@ -21553,6 +21577,7 @@ DOMAIN-SUFFIX,l3op.info,Reject
 DOMAIN-SUFFIX,l3wq5.cn,Reject
 DOMAIN-SUFFIX,l4elb.cn,Reject
 DOMAIN-SUFFIX,l4oecosq.com,Reject
+DOMAIN-SUFFIX,l5wt3.cn,Reject
 DOMAIN-SUFFIX,l7r0sgc0.top,Reject
 DOMAIN-SUFFIX,l9tdhe6.com,Reject
 DOMAIN-SUFFIX,la-la-moon.com,Reject
@@ -21655,6 +21680,7 @@ DOMAIN-SUFFIX,laratlacrestot.pro,Reject
 DOMAIN-SUFFIX,larentisol.com,Reject
 DOMAIN-SUFFIX,lareson.com,Reject
 DOMAIN-SUFFIX,large-format.net,Reject
+DOMAIN-SUFFIX,larkashivy.work,Reject
 DOMAIN-SUFFIX,larrenpicture.pro,Reject
 DOMAIN-SUFFIX,larrenworld.pro,Reject
 DOMAIN-SUFFIX,laserhairremovalstore.com,Reject
@@ -22358,6 +22384,7 @@ DOMAIN-SUFFIX,localpoint.ch,Reject
 DOMAIN-SUFFIX,localsearch24.co.uk,Reject
 DOMAIN-SUFFIX,localytics.com,Reject
 DOMAIN-SUFFIX,location.fashionises.com,Reject
+DOMAIN-SUFFIX,locationivanstutter.com,Reject
 DOMAIN-SUFFIX,lockerdome.com,Reject
 DOMAIN-SUFFIX,lockerdomecdn.com,Reject
 DOMAIN-SUFFIX,lockhosts.com,Reject
@@ -22372,6 +22399,7 @@ DOMAIN-SUFFIX,lode88.vip,Reject
 DOMAIN-SUFFIX,loders.club,Reject
 DOMAIN-SUFFIX,lodoxfwite.com,Reject
 DOMAIN-SUFFIX,lodqycbq.com,Reject
+DOMAIN-SUFFIX,loftygreater.com,Reject
 DOMAIN-SUFFIX,lofv.xyz,Reject
 DOMAIN-SUFFIX,log-hl.snssdk.com,Reject
 DOMAIN-SUFFIX,log-ird.outbrain.com,Reject
@@ -23871,6 +23899,7 @@ DOMAIN-SUFFIX,mibet.win,Reject
 DOMAIN-SUFFIX,mibet88.com,Reject
 DOMAIN-SUFFIX,mibmcbm.com,Reject
 DOMAIN-SUFFIX,mibsooks.net,Reject
+DOMAIN-SUFFIX,micmatchi.club,Reject
 DOMAIN-SUFFIX,micodigo.com,Reject
 DOMAIN-SUFFIX,micpn.com,Reject
 DOMAIN-SUFFIX,micreative-china.cn,Reject
@@ -23943,6 +23972,7 @@ DOMAIN-SUFFIX,mingboxieye.com,Reject
 DOMAIN-SUFFIX,minglongtea.cn,Reject
 DOMAIN-SUFFIX,mingysh.com,Reject
 DOMAIN-SUFFIX,mini.hao123.com,Reject
+DOMAIN-SUFFIX,miniatureabhor.com,Reject
 DOMAIN-SUFFIX,minidoc.ru,Reject
 DOMAIN-SUFFIX,minimumpay.info,Reject
 DOMAIN-SUFFIX,mining.best,Reject
@@ -23980,6 +24010,7 @@ DOMAIN-SUFFIX,miserintesto.site,Reject
 DOMAIN-SUFFIX,misosoup.io,Reject
 DOMAIN-SUFFIX,misqb.xyz,Reject
 DOMAIN-SUFFIX,misrepush.com,Reject
+DOMAIN-SUFFIX,missingarchery.com,Reject
 DOMAIN-SUFFIX,misslk.com,Reject
 DOMAIN-SUFFIX,missrich.net,Reject
 DOMAIN-SUFFIX,misstrends.com,Reject
@@ -24623,6 +24654,7 @@ DOMAIN-SUFFIX,mubite.cn,Reject
 DOMAIN-SUFFIX,muchhetont.ru,Reject
 DOMAIN-SUFFIX,muchritfakethen.info,Reject
 DOMAIN-SUFFIX,mucocutaneousmyrmecophaga.com,Reject
+DOMAIN-SUFFIX,mudezs.com,Reject
 DOMAIN-SUFFIX,mueyqvzw.com,Reject
 DOMAIN-SUFFIX,mugleafly.com,Reject
 DOMAIN-SUFFIX,mugpothop.com,Reject
@@ -25550,6 +25582,7 @@ DOMAIN-SUFFIX,nllbirpx.com,Reject
 DOMAIN-SUFFIX,nlnhfsmo.com,Reject
 DOMAIN-SUFFIX,nlog.droid4x.cn,Reject
 DOMAIN-SUFFIX,nlqfhpikbrtk.com,Reject
+DOMAIN-SUFFIX,nlqnmkn.cn,Reject
 DOMAIN-SUFFIX,nlserver.xyz,Reject
 DOMAIN-SUFFIX,nlteopgkeb.com,Reject
 DOMAIN-SUFFIX,nlujbqmtgv.com,Reject
@@ -25637,6 +25670,7 @@ DOMAIN-SUFFIX,nonstoppartner.net,Reject
 DOMAIN-SUFFIX,noosaphy.net,Reject
 DOMAIN-SUFFIX,noowho.com,Reject
 DOMAIN-SUFFIX,noproblfr.com,Reject
+DOMAIN-SUFFIX,noqj1iz4u28t.com,Reject
 DOMAIN-SUFFIX,noqukjy.com,Reject
 DOMAIN-SUFFIX,norakseemlyntr.info,Reject
 DOMAIN-SUFFIX,nordicresearch.com,Reject
@@ -25806,6 +25840,7 @@ DOMAIN-SUFFIX,ntbtvdbomevgzs.com,Reject
 DOMAIN-SUFFIX,ntdbjlngermplx.com,Reject
 DOMAIN-SUFFIX,ntdvjlvau.com,Reject
 DOMAIN-SUFFIX,ntedporchite.info,Reject
+DOMAIN-SUFFIX,ntentifycom.club,Reject
 DOMAIN-SUFFIX,nterbx.com,Reject
 DOMAIN-SUFFIX,ntgqcnferh.com,Reject
 DOMAIN-SUFFIX,ntgygnke.com,Reject
@@ -25827,6 +25862,7 @@ DOMAIN-SUFFIX,ntpmhryl.com,Reject
 DOMAIN-SUFFIX,ntroducepo.club,Reject
 DOMAIN-SUFFIX,ntryhospitesoili.fun,Reject
 DOMAIN-SUFFIX,ntryonoxojiyya.com,Reject
+DOMAIN-SUFFIX,ntsacklecre.club,Reject
 DOMAIN-SUFFIX,ntsartingaccura.info,Reject
 DOMAIN-SUFFIX,ntsimprovide.info,Reject
 DOMAIN-SUFFIX,ntsparallycalc.info,Reject
@@ -26725,6 +26761,7 @@ DOMAIN-SUFFIX,optimizely.appspot.com,Reject
 DOMAIN-SUFFIX,optimizely.com,Reject
 DOMAIN-SUFFIX,optimizelydata.com,Reject
 DOMAIN-SUFFIX,optimizesocial.com,Reject
+DOMAIN-SUFFIX,optimizesrv.com,Reject
 DOMAIN-SUFFIX,optimost.com,Reject
 DOMAIN-SUFFIX,optin-machine.com,Reject
 DOMAIN-SUFFIX,optinemailpro.com,Reject
@@ -27731,6 +27768,7 @@ DOMAIN-SUFFIX,photo-ads.zaloapp.com,Reject
 DOMAIN-SUFFIX,photo.bscy05.cn,Reject
 DOMAIN-SUFFIX,photographpan.com,Reject
 DOMAIN-SUFFIX,photorank.me,Reject
+DOMAIN-SUFFIX,phovihopy.pro,Reject
 DOMAIN-SUFFIX,phox2ey.bid,Reject
 DOMAIN-SUFFIX,phpad.cqnews.net,Reject
 DOMAIN-SUFFIX,phpadsnew.new.natuurpark.nl,Reject
@@ -28664,6 +28702,7 @@ DOMAIN-SUFFIX,prostopartnerka.ru,Reject
 DOMAIN-SUFFIX,protally.net,Reject
 DOMAIN-SUFFIX,proteaser.net,Reject
 DOMAIN-SUFFIX,protectaffiliates.org,Reject
+DOMAIN-SUFFIX,protectdedication.com,Reject
 DOMAIN-SUFFIX,protection-booster.club,Reject
 DOMAIN-SUFFIX,protection-cleaner.club,Reject
 DOMAIN-SUFFIX,protection-device.club,Reject
@@ -29143,6 +29182,7 @@ DOMAIN-SUFFIX,q1.yyxwzx.com,Reject
 DOMAIN-SUFFIX,q1ilb0enze.ru,Reject
 DOMAIN-SUFFIX,q1media.com,Reject
 DOMAIN-SUFFIX,q1mediahydraplatform.com,Reject
+DOMAIN-SUFFIX,q1qfc323.com,Reject
 DOMAIN-SUFFIX,q1xyxm89.com,Reject
 DOMAIN-SUFFIX,q20jqurls0y7gk8.info,Reject
 DOMAIN-SUFFIX,q2melbourne.com,Reject
@@ -30171,6 +30211,7 @@ DOMAIN-SUFFIX,rejestr.org,Reject
 DOMAIN-SUFFIX,rek.hepaffiliates.com,Reject
 DOMAIN-SUFFIX,rek.mobi,Reject
 DOMAIN-SUFFIX,rek.serial24.com,Reject
+DOMAIN-SUFFIX,rek.www.wp.pl,Reject
 DOMAIN-SUFFIX,rek1.gtorrent.org,Reject
 DOMAIN-SUFFIX,rekhatov.ru,Reject
 DOMAIN-SUFFIX,rekl.brawlstars-app.ru,Reject
@@ -30484,6 +30525,7 @@ DOMAIN-SUFFIX,rhinoseo.com,Reject
 DOMAIN-SUFFIX,rhkwknlpkiqb.com,Reject
 DOMAIN-SUFFIX,rholi.ru,Reject
 DOMAIN-SUFFIX,rhombusads.com,Reject
+DOMAIN-SUFFIX,rhotonaid.com,Reject
 DOMAIN-SUFFIX,rhqrfnkngrhrha.com,Reject
 DOMAIN-SUFFIX,rhtag.com,Reject
 DOMAIN-SUFFIX,rhypgggd.com,Reject
@@ -31577,6 +31619,7 @@ DOMAIN-SUFFIX,secondstreetmedia.com,Reject
 DOMAIN-SUFFIX,seconomica.info,Reject
 DOMAIN-SUFFIX,seconomics.club,Reject
 DOMAIN-SUFFIX,secreat.club,Reject
+DOMAIN-SUFFIX,secrecycommotionaspirin.com,Reject
 DOMAIN-SUFFIX,secret-photos.com,Reject
 DOMAIN-SUFFIX,secretivecub.com,Reject
 DOMAIN-SUFFIX,secretspiders.com,Reject
@@ -31989,6 +32032,7 @@ DOMAIN-SUFFIX,shgvuhvf.com,Reject
 DOMAIN-SUFFIX,shibagongfang.com,Reject
 DOMAIN-SUFFIX,shidailw.com,Reject
 DOMAIN-SUFFIX,shidvvvhi.com,Reject
+DOMAIN-SUFFIX,shifen.com,Reject
 DOMAIN-SUFFIX,shifoagn.uk,Reject
 DOMAIN-SUFFIX,shiguangyx.cn,Reject
 DOMAIN-SUFFIX,shihoult.com,Reject
@@ -34504,6 +34548,7 @@ DOMAIN-SUFFIX,temphilltop.com,Reject
 DOMAIN-SUFFIX,temphilltop.net,Reject
 DOMAIN-SUFFIX,templates.buscape.com,Reject
 DOMAIN-SUFFIX,tempobanners.com,Reject
+DOMAIN-SUFFIX,temptedcreationnovel.com,Reject
 DOMAIN-SUFFIX,tencentmind.com,Reject
 DOMAIN-SUFFIX,tend-new.com,Reject
 DOMAIN-SUFFIX,tendatta.com,Reject
@@ -34695,6 +34740,7 @@ DOMAIN-SUFFIX,thespecialsearch.com,Reject
 DOMAIN-SUFFIX,thestat.net,Reject
 DOMAIN-SUFFIX,theta.sogoucdn.com,Reject
 DOMAIN-SUFFIX,thetabdot.com,Reject
+DOMAIN-SUFFIX,thetarhaw.com,Reject
 DOMAIN-SUFFIX,thetestpage.39.net,Reject
 DOMAIN-SUFFIX,thethaofb88.com,Reject
 DOMAIN-SUFFIX,thethateronjus.pro,Reject
@@ -36913,6 +36959,7 @@ DOMAIN-SUFFIX,urtracker.q-sis.de,Reject
 DOMAIN-SUFFIX,urwb.ru,Reject
 DOMAIN-SUFFIX,uryle.ru,Reject
 DOMAIN-SUFFIX,urynnngdrt.com,Reject
+DOMAIN-SUFFIX,uryobtainlyi.club,Reject
 DOMAIN-SUFFIX,uryvzhvgpulaog.com,Reject
 DOMAIN-SUFFIX,us.3zs0.date,Reject
 DOMAIN-SUFFIX,us.a1.yimg.com,Reject
@@ -37089,6 +37136,7 @@ DOMAIN-SUFFIX,uxfpdo3hx5fi.com,Reject
 DOMAIN-SUFFIX,uxideepwawz.com,Reject
 DOMAIN-SUFFIX,uxlkqeiez.com,Reject
 DOMAIN-SUFFIX,uxnssjly.com,Reject
+DOMAIN-SUFFIX,uxnycjr.cn,Reject
 DOMAIN-SUFFIX,uxvtglgbeshxn.bid,Reject
 DOMAIN-SUFFIX,uxzbsinjyld.com,Reject
 DOMAIN-SUFFIX,uxzcwowjd.com,Reject
@@ -38605,6 +38653,7 @@ DOMAIN-SUFFIX,whiteboardnez.com,Reject
 DOMAIN-SUFFIX,whitective.club,Reject
 DOMAIN-SUFFIX,whitehalfabrr.club,Reject
 DOMAIN-SUFFIX,whitepixel.com,Reject
+DOMAIN-SUFFIX,whittlecdn.xyz,Reject
 DOMAIN-SUFFIX,whitwise.com,Reject
 DOMAIN-SUFFIX,whizstats.com,Reject
 DOMAIN-SUFFIX,whizzco.com,Reject
@@ -38822,6 +38871,7 @@ DOMAIN-SUFFIX,wnfjzjmc.com,Reject
 DOMAIN-SUFFIX,wnhzlesdqzu.com,Reject
 DOMAIN-SUFFIX,wnlhbehajh.com,Reject
 DOMAIN-SUFFIX,wnp.com,Reject
+DOMAIN-SUFFIX,wnprot.com,Reject
 DOMAIN-SUFFIX,wnsoth.cn,Reject
 DOMAIN-SUFFIX,wnstpoiqrv.com,Reject
 DOMAIN-SUFFIX,wntpgjzwg.com,Reject
@@ -38966,8 +39016,10 @@ DOMAIN-SUFFIX,ws.ksmobile.net,Reject
 DOMAIN-SUFFIX,ws.wenshenxiu.com,Reject
 DOMAIN-SUFFIX,ws341.com,Reject
 DOMAIN-SUFFIX,ws7j.com,Reject
+DOMAIN-SUFFIX,wsdvs.com,Reject
 DOMAIN-SUFFIX,wsemqlxmmhp.com,Reject
 DOMAIN-SUFFIX,wsgblw.com,Reject
+DOMAIN-SUFFIX,wsglb0.com,Reject
 DOMAIN-SUFFIX,wsgmxgtmxymwt.com,Reject
 DOMAIN-SUFFIX,wshosting.ru,Reject
 DOMAIN-SUFFIX,wsjlbbqemr23.com,Reject
@@ -40373,6 +40425,7 @@ DOMAIN-SUFFIX,youthfire.com,Reject
 DOMAIN-SUFFIX,youtube2top.com,Reject
 DOMAIN-SUFFIX,youtui456.com,Reject
 DOMAIN-SUFFIX,youweiprint.com,Reject
+DOMAIN-SUFFIX,youwugong.jobui.com,Reject
 DOMAIN-SUFFIX,youyicsyy.com,Reject
 DOMAIN-SUFFIX,youyoumw.com,Reject
 DOMAIN-SUFFIX,yovoads.com,Reject
@@ -40859,6 +40912,7 @@ DOMAIN-SUFFIX,zhangtom1989.cn,Reject
 DOMAIN-SUFFIX,zhanjiangletian.com,Reject
 DOMAIN-SUFFIX,zhaopai020.com,Reject
 DOMAIN-SUFFIX,zharezhi.info,Reject
+DOMAIN-SUFFIX,zhengjsmd.cn,Reject
 DOMAIN-SUFFIX,zhengyejixie.com,Reject
 DOMAIN-SUFFIX,zhengzhoupengbo.com,Reject
 DOMAIN-SUFFIX,zherimo.ru,Reject
