--- a/sr_top500_banlist_ad.conf
+++ b/sr_top500_banlist_ad.conf
@@ -1,5 +1,5 @@
 # Shadowrocket Rules by Skyrocketing Hong (https://github.com/skyrocketing1999/Shadowrocket-ADBlock-Rules)
-# build time: 2020-08-02 12:48:17
+# build time: 2020-08-02 12:49:53
 
 [General]
 bypass-system = true
@@ -14,6 +14,7 @@ DOMAIN-KEYWORD,google,Proxy,force-remote-dns
 DOMAIN-KEYWORD,blogspot,Proxy,force-remote-dns
 DOMAIN-KEYWORD,youtube,Proxy,force-remote-dns
 DOMAIN-KEYWORD,ytimg,Proxy,force-remote-dns
+DOMAIN-KEYWORD,ggpht,Proxy,force-remote-dns
 # > Facebook
 IP-CIDR,3.123.36.126/32,Proxy,no-resolve
 IP-CIDR,35.157.215.84/32,Proxy,no-resolve
@@ -907,7 +908,7 @@ DOMAIN-SUFFIX,yuanchengxiezuo.com,Reject
 DOMAIN-SUFFIX,zbrushcn.com,Reject
 DOMAIN-SUFFIX,zhzzx.com,Reject
 
-# adblock rules refresh time: 2020-08-02 12:48:16
+# adblock rules refresh time: 2020-08-02 12:49:52
 DOMAIN-SUFFIX,0024aaaa.com,Reject
 DOMAIN-SUFFIX,0026645142c89aeb1.com,Reject
 DOMAIN-SUFFIX,003store.com,Reject
